--- a/events/index.html
+++ b/events/index.html
@@ -25,10 +25,12 @@
     <script src="../js/jquery/2.2.2.min.js"></script>
     <script src="../semantic/semantic.min.js"></script>
     <script src="../semantic/slide.min.js"></script>
-    <script src="../js/header-footer.js"></script>
     <script src="../js/events.js"></script>
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="../css/events.css">
+
+    <!-- handle header and footer -->
+    <script src="../js/header-footer.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
 
     <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
