--- a/worship/index.html
+++ b/worship/index.html
@@ -27,10 +27,12 @@
     <script src="../semantic/slide.min.js"></script>
     <script src="../js/data.js"></script>
     <script src="../js/worship.js"></script>
-    <script src="../js/header-footer.js"></script>
     <script src="../js/beru-theme/elements.js"></script>
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="../css/worship.css">
+
+    <!-- handle header and footer -->
+    <script src="../js/header-footer.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
 
     <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
@@ -69,10 +71,10 @@
       </div>
 
       <div class="ui masthead-mobile mobile only tablet only grid">
-              <div class="four wide column mobile-container"><i class="home icon element-mobile"></i></div>
-              <div class="four wide column mobile-container active"><i class="music icon element-mobile"></i></div>
-              <div class="four wide column mobile-container"><i class="calendar icon element-mobile"></i></div>
-              <div class="four wide column mobile-container"><i class="world icon element-mobile"></i></div>
+              <div class="four wide column mobile-container home-link"><i class="home icon element-mobile"></i></div>
+              <div class="four wide column mobile-container worship-link"><i class="music icon element-mobile"></i></div>
+              <div class="four wide column mobile-container events-link active"><i class="calendar icon element-mobile"></i></div>
+              <div class="four wide column mobile-container language-link"><i class="world icon element-mobile"></i></div>
       </div>
 
       <div class="ui text container">
