--- a/worship/index.html
+++ b/worship/index.html
@@ -72,8 +72,8 @@
 
       <div class="ui masthead-mobile mobile only tablet only grid">
               <div class="four wide column mobile-container home-link"><i class="home icon element-mobile"></i></div>
-              <div class="four wide column mobile-container worship-link"><i class="music icon element-mobile"></i></div>
-              <div class="four wide column mobile-container events-link active"><i class="calendar icon element-mobile"></i></div>
+              <div class="four wide column mobile-container worship-link active"><i class="music icon element-mobile"></i></div>
+              <div class="four wide column mobile-container events-link"><i class="calendar icon element-mobile"></i></div>
               <div class="four wide column mobile-container language-link"><i class="world icon element-mobile"></i></div>
       </div>
 
