--- a/events/index.html
+++ b/events/index.html
@@ -76,13 +76,44 @@
       </div>
 
       <div class="ui text container">
-
-
-        EVENTS
-
-
+        <div class="ui items">
+          <div id="rev-23-04-16" class="item rev-publish">
+              <div class="ui medium image rev-img">
+                <img class="rev-img" src="../images/2016/abril/1.jpg">
+              </div>
+              <div class="top aligned content">
+                <div class="header">
+                  ¡ Sant Jordi Day !
+                </div>
+                <div class="meta">
+                  <span class="date">Sábado 23 Abril</span>
+                </div>
+                <div class="description">
+                  <p>
+                    Este sábado a las 20h compartiremos un tiempo muy especial en familia.
+                    <br>
+                    ¡Te esperamos!
+                  </p>
+                  <p>
+                    Lugar: Carrer Pinar del Río 5, bis.
+                  </p>
+                </div>
+                <div class="ui extra">
+                  <div class="ui left floated">
+                    Ver en publicación : 
+                    <button class="ui circular facebook icon button">
+                      <i class="facebook icon"></i>
+                    </button>
+                    <button class="ui circular instagram icon button">
+                      <i class="instagram icon"></i>
+                    </button>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
   </div>
 
   <!-- FOOTER -->
