--- a/events/index.html
+++ b/events/index.html
@@ -25,13 +25,16 @@
     <script src="../js/jquery/2.2.2.min.js"></script>
     <script src="../semantic/semantic.min.js"></script>
     <script src="../semantic/slide.min.js"></script>
-    <script src="../js/events.js"></script>
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/events.css">
+
 
     <!-- handle header and footer -->
     <script src="../js/header-footer.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
+
+    <!-- handle header and footer -->
+    <script src="../js/events.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/events.css">
 
     <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
     <meta name="keywords" content="html5, ui, library, framework, javascript" />
@@ -100,7 +103,7 @@
                 </div>
                 <div class="ui extra">
                   <div class="ui left floated">
-                    Ver en publicación : 
+                    Ver en publicación :
                     <button class="ui circular facebook icon button">
                       <i class="facebook icon"></i>
                     </button>
