--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <body>
     <script type="text/javascript">
-      window.location.pathname = '/RevolutionC29/worship/';
+      window.location.href = '/home/';
     </script>
   </body>
 </html>
