--- a/worship/index.html
+++ b/worship/index.html
@@ -25,15 +25,18 @@
     <script src="../js/jquery/2.2.2.min.js"></script>
     <script src="../semantic/semantic.min.js"></script>
     <script src="../semantic/slide.min.js"></script>
-    <script src="../js/data.js"></script>
-    <script src="../js/worship.js"></script>
-    <script src="../js/beru-theme/elements.js"></script>
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/worship.css">
+
 
     <!-- handle header and footer -->
     <script src="../js/header-footer.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
+    <link rel="stylesheet" type="text/css" href="../css/worship.css">
+    
+    <!-- handle index web -->
+    <script src="../js/data.js"></script>
+    <script src="../js/worship.js"></script>
+    <script src="../js/beru-theme/elements.js"></script>
 
     <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
     <meta name="keywords" content="html5, ui, library, framework, javascript" />
@@ -45,6 +48,7 @@
   <body>
     <div class="pusher">
 
+      <!--- HEADER -->
       <div class="ui masthead computer only grid">
         <div class="ui container">
           <div class="ui secondary pointing menu">
@@ -69,7 +73,6 @@
           </div>
         </div>
       </div>
-
       <div class="ui masthead-mobile mobile only tablet only grid">
               <div class="four wide column mobile-container home-link"><i class="home icon element-mobile"></i></div>
               <div class="four wide column mobile-container worship-link active"><i class="music icon element-mobile"></i></div>
@@ -77,6 +80,7 @@
               <div class="four wide column mobile-container language-link"><i class="world icon element-mobile"></i></div>
       </div>
 
+      <!--- CONTAINER -->
       <div class="ui text container">
         <!-- CHOOSE LETTER OR CHORDS -->
         <div class="ui fluid two item tabs menu m1">
