--- a/home/index.html
+++ b/home/index.html
@@ -52,13 +52,13 @@
             <a class="container-logoc29">
               <image class="logoc29" src="../images/logo.png">
             </a>
-            <a class="active item">
+            <a class="active item" href="../home/">
               <i class="home icon"></i> Principal
             </a>
-            <a class="item" href="worship">
+            <a class="item" href="../worship/">
               <i class="music icon"></i> Alabanza
             </a>
-            <a class="item" href="events">
+            <a class="item" href="../events/">
               <i class="calendar icon"></i> Eventos
             </a>
             <div class="right menu">
