--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <body>
     <script type="text/javascript">
-      window.location.href = '/home/';
+      window.location.href="/RevolutionC29/home/";
     </script>
   </body>
 </html>
