--- a/events/index.html
+++ b/events/index.html
@@ -80,6 +80,42 @@
 
       <div class="ui text container">
         <div class="ui items">
+          <div id="rev-30-04-16" class="item rev-publish">
+              <div class="ui medium image rev-img">
+                <img class="rev-img" src="../images/2016/abril/2.png">
+              </div>
+              <div class="top aligned content">
+                <div class="header">
+                  ¡ Vidas Incompletas !
+                </div>
+                <div class="meta">
+                  <span class="date">Sábado 30 Abril</span>
+                </div>
+                <div class="description">
+                  <p>
+                    Este sábado nos vemos a las 19h en Calle Pinar del Río 5 bis y pasaremos un tiempo en familia.
+                    <br>
+                    ¡No te lo pierdas!
+                  </p>
+                  <p>
+                    Lugar: Carrer Pinar del Río 5, bis.
+                    <br>
+                    Hora: 19h.
+                  </p>
+                </div>
+                <div class="ui extra">
+                  <div class="ui left floated">
+                    Ver en publicación :
+                    <button class="ui circular facebook icon button">
+                      <i class="facebook icon"></i>
+                    </button>
+                    <button class="ui circular instagram icon button">
+                      <i class="instagram icon"></i>
+                    </button>
+                  </div>
+              </div>
+            </div>
+          </div>
           <div id="rev-23-04-16" class="item rev-publish">
               <div class="ui medium image rev-img">
                 <img class="rev-img" src="../images/2016/abril/1.jpg">
@@ -99,6 +135,8 @@
                   </p>
                   <p>
                     Lugar: Carrer Pinar del Río 5, bis.
+                    <br>
+                    Hora: 20h.
                   </p>
                 </div>
                 <div class="ui extra">
