--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,8 @@
 
     <!-- Site Properities -->
     <title>Alabanza - Revolution C29</title>
-    <meta name="descrption" content="Proyecto personal para ayudar al grupo de jovenes de C29 en Barcelona." />
+    <meta name="descrption" content="Grupo de jóvenes de la iglesia Capítulo 29 en Barcelona." />
+    <meta name="keywords" content="revolution,c29,html5, ui, library, framework, javascript" />
 		<link rel="shortcut icon" type="image/x-icon" href="../images/logo.png">
 		<link rel="shortcut icon" type="image/png" href="../images/logo.png" />
 		<link rel="apple-touch-icon" size="" href="../images/logo.png" />
@@ -34,9 +35,6 @@
     <!-- handle index web -->
     <script type="text/javascript" src="../js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/home.css">
-
-    <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
-    <meta name="keywords" content="html5, ui, library, framework, javascript" />
 
   </head>
 
