--- a/worship/index.html
+++ b/worship/index.html
@@ -14,7 +14,8 @@
 
     <!-- Site Properities -->
     <title>Alabanza - Revolution C29</title>
-    <meta name="descrption" content="Proyecto personal para ayudar al grupo de jovenes de C29 en Barcelona." />
+    <meta name="descrption" content="Grupo de jóvenes de la iglesia Capítulo 29 en Barcelona." />
+    <meta name="keywords" content="revolution,c29,html5, ui, library, framework, javascript" />
 		<link rel="shortcut icon" type="image/x-icon" href="../images/logo.png">
 		<link rel="shortcut icon" type="image/png" href="../images/logo.png" />
 		<link rel="apple-touch-icon" size="" href="../images/logo.png" />
@@ -32,14 +33,12 @@
     <script src="../js/header-footer.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
     <link rel="stylesheet" type="text/css" href="../css/worship.css">
-    
+
     <!-- handle index web -->
     <script src="../js/data.js"></script>
     <script src="../js/worship.js"></script>
     <script src="../js/beru-theme/elements.js"></script>
 
-    <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
-    <meta name="keywords" content="html5, ui, library, framework, javascript" />
 
   </head>
 
