--- a/events/index.html
+++ b/events/index.html
@@ -14,7 +14,8 @@
 
     <!-- Site Properities -->
     <title>Eventos - RevolutionC29</title>
-    <meta name="descrption" content="Proyecto personal para ayudar al grupo de jovenes de C29 en Barcelona." />
+    <meta name="descrption" content="Grupo de jóvenes de la iglesia Capítulo 29 en Barcelona." />
+    <meta name="keywords" content="revolution,c29,html5, ui, library, framework, javascript" />
 		<link rel="shortcut icon" type="image/x-icon" href="../images/logo.png">
 		<link rel="shortcut icon" type="image/png" href="../images/logo.png" />
 		<link rel="apple-touch-icon" size="" href="../images/logo.png" />
@@ -35,9 +36,6 @@
     <!-- handle header and footer -->
     <script src="../js/events.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/events.css">
-
-    <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
-    <meta name="keywords" content="html5, ui, library, framework, javascript" />
 
   </head>
 
