--- a/home/index.html
+++ b/home/index.html
@@ -36,6 +36,10 @@
     <script type="text/javascript" src="../js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/home.css">
 
+    <!-- google analytics -->
+    <script src="../js/analytics.js"></script>
+    <script src="../js/revolution.analytics.js"></script>
+
   </head>
 
 
