--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <body>
+    <!-- google analytics -->
+    <script src="js/analytics.js"></script>
+    <script src="js/revolution.analytics.js"></script>
     <script type="text/javascript">
       window.location.href="/RevolutionC29/home/";
     </script>
