--- a/worship/index.html
+++ b/worship/index.html
@@ -39,6 +39,10 @@
     <script src="../js/worship.js"></script>
     <script src="../js/beru-theme/elements.js"></script>
 
+    <!-- google analytics -->
+    <script src="../js/analytics.js"></script>
+    <script src="../js/revolution.analytics.js"></script>
+
 
   </head>
 
