--- a/events/index.html
+++ b/events/index.html
@@ -37,6 +37,10 @@
     <script src="../js/events.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/events.css">
 
+    <!-- google analytics -->
+    <script src="../js/analytics.js"></script>
+    <script src="../js/revolution.analytics.js"></script>
+
   </head>
 
 
