--- a/search/index.html
+++ b/search/index.html
@@ -84,7 +84,13 @@
       </div>
 
       <div class="ui text container">
-        
+        <div class="ui category search">
+	  <div class="ui icon input">
+	    <input class="prompt" type="text" placeholder="Buscar canción...">
+	    <i class="search icon"></i>
+	  </div>
+	  <div class="results"></div>
+	</div>
       </div>
     </div>
   </div>
