--- a/search/index.html
+++ b/search/index.html
@@ -84,9 +84,9 @@
       </div>
 
       <div class="ui text container">
-        <div class="ui category search">
+        <div class="ui search">
 	  <div class="ui icon input">
-	    <input class="prompt" type="text" placeholder="Buscar canción...">
+	    <input class="prompt" type="text" placeholder="Buscar canciones...">
 	    <i class="search icon"></i>
 	  </div>
 	  <div class="results"></div>
