--- a/search/index.html
+++ b/search/index.html
@@ -85,7 +85,7 @@
 
       <div class="ui text container">
         <div class="ui search">
-	  <div class="ui icon input">
+	  <div class="ui fluid icon input">
 	    <input class="prompt" type="text" placeholder="Buscar canciones...">
 	    <i class="search icon"></i>
 	  </div>
