--- a/search/index.html
+++ b/search/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="ui text container">
-        <div class="ui search">
+        <div class="ui fluid search">
 	  <div class="ui fluid icon input">
 	    <input class="prompt" type="text" placeholder="Buscar canciones...">
 	    <i class="search icon"></i>
