--- a/search/index.html
+++ b/search/index.html
@@ -82,7 +82,8 @@
               <div class="four wide column mobile-container events-link"><i class="calendar icon element-mobile"></i></div>
               <div class="four wide column mobile-container language-link active"><i class="search icon element-mobile"></i></div>
       </div>
-
+	
+	<!--search-->
       <div class="ui text container">
         <div class="ui fluid search">
 	  <div class="ui fluid icon input">
@@ -92,6 +93,9 @@
 	  <div class="results"></div>
 	</div>
       </div>
+       <!--result-->
+       <div class="ui text container" id="search-result"></div>
+      
     </div>
   </div>
 
