--- a/search/index.html
+++ b/search/index.html
@@ -94,7 +94,7 @@
 	</div>
       </div>
        <!--result-->
-       <div class="ui text container" id="search-result"></div>
+       <div class="ui text container" id="search-result" style="padding-top: 0em"></div>
       
     </div>
   </div>
