--- a/worship/index.html
+++ b/worship/index.html
@@ -67,6 +67,9 @@
             <a class="item" href="../events/">
               <i class="calendar icon"></i> Eventos
             </a>
+            <a class="item" href="../search/">
+              <i class="search icon"></i> Buscar
+            </a>
             <div class="right menu">
               <div class="ui language floating dropdown link item">
                 <i class="world icon"></i>
@@ -80,7 +83,7 @@
               <div class="four wide column mobile-container home-link"><i class="home icon element-mobile"></i></div>
               <div class="four wide column mobile-container worship-link active"><i class="music icon element-mobile"></i></div>
               <div class="four wide column mobile-container events-link"><i class="calendar icon element-mobile"></i></div>
-              <div class="four wide column mobile-container language-link"><i class="world icon element-mobile"></i></div>
+              <div class="four wide column mobile-container language-link"><i class="search icon element-mobile"></i></div>
       </div>
 
       <!--- CONTAINER -->
