--- a/events/index.html
+++ b/events/index.html
@@ -63,6 +63,9 @@
             <a class="active item" href="../events/">
               <i class="calendar icon"></i> Eventos
             </a>
+            <a class="item" href="../search/">
+              <i class="search icon"></i> Buscar
+            </a>
             <div class="right menu">
               <div class="ui language floating dropdown link item">
                 <i class="world icon"></i>
@@ -77,7 +80,7 @@
               <div class="four wide column mobile-container home-link"><i class="home icon element-mobile"></i></div>
               <div class="four wide column mobile-container worship-link"><i class="music icon element-mobile"></i></div>
               <div class="four wide column mobile-container events-link active"><i class="calendar icon element-mobile"></i></div>
-              <div class="four wide column mobile-container language-link"><i class="world icon element-mobile"></i></div>
+              <div class="four wide column mobile-container language-link"><i class="search icon element-mobile"></i></div>
       </div>
 
       <div class="ui text container">
