--- a/search/index.html
+++ b/search/index.html
@@ -93,11 +93,28 @@
 	  <div class="results"></div>
 	</div>
       </div>
-       <!--result-->
-       <div class="ui text container" id="search-result" style="padding-top: 0em"></div>
-      
-    </div>
-  </div>
+      <!--result-->
+      <div class="ui text container" id="search-result" style="padding-top: 0em"></div>
+      <!--modal-->
+      <div class="ui modal">
+	  <i class="close icon"></i>
+	  <div class="header">
+	    Modal Title
+	  </div>
+	  <div class="image content">
+	    <div class="image">
+	      An image can appear on left or an icon
+	    </div>
+	    <div class="description">
+	      A description can appear on the right
+	    </div>
+	  </div>
+	  <div class="actions">
+	    <div class="ui button">Cerrar</div>
+	</div>
+      </div>
+   </div>
+ </div>
 
   <!-- FOOTER -->
   <div class="ui inverted very padded vertical footer segment">
