--- a/search/index.html
+++ b/search/index.html
@@ -96,7 +96,7 @@
       <!--result-->
       <div class="ui text container" id="search-result" style="padding-top: 0em"></div>
       <!--modal-->
-      <div class="ui modal">
+      <div class="ui modal note">
 	  <i class="close icon"></i>
 	  <div class="header">
 	    Modal Title
