--- a/search/index.html
+++ b/search/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
 
     <!-- handle header and footer -->
+    <script src="../js/notes.js"></script>
     <script src="../js/search.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/search.css">
 
@@ -99,7 +100,7 @@
       <div class="ui modal note">
 	  <i class="close icon"></i>
 	  <div class="header">
-	    Modal Title
+	    <span id="note-name"></span>
 	  </div>
 	  <div class="image content">
 	    <div class="image">
