--- a/search/index.html
+++ b/search/index.html
@@ -99,20 +99,12 @@
       <!--modal-->
       <div class="ui modal note">
 	  <i class="close icon"></i>
-	  <div class="header">
-	    <span id="note-name"></span>
-	  </div>
+	  <div class="ui center aligned header"></div>
 	  <div class="image content">
 	    <div class="image">
 	      An image can appear on left or an icon
 	    </div>
-	    <div class="description">
-	      A description can appear on the right
-	    </div>
 	  </div>
-	  <div class="actions">
-	    <div class="ui button">Cerrar</div>
-	</div>
       </div>
    </div>
  </div>
