--- a/search/index.html
+++ b/search/index.html
@@ -102,7 +102,7 @@
 	  <div class="ui center aligned header"></div>
 	  <div class="image content">
 	    <div class="image">
-	      An image can appear on left or an icon
+	      Ver notas online, aún no está disponible. :)
 	    </div>
 	  </div>
       </div>
