--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#222222">
     <meta name="msapplication-navbutton-color" content="#222222">
     <meta name="apple-mobile-web-app-status-bar-style" content="#222222">
-    <title>Buscar | Revolution C29</title>
+    <title>Revolution C29</title>
     <meta name="descrption" content="Grupo de jóvenes de la iglesia Capítulo 29 en Barcelona." />
     <meta name="keywords" content="revolution,c29,html5, ui, library, framework, javascript" />
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
