--- a/worship/index.html
+++ b/worship/index.html
@@ -32,12 +32,12 @@
     <!-- handle header and footer -->
     <script src="../js/header-footer.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
-    <link rel="stylesheet" type="text/css" href="../css/worship.css">
+    <link rel="stylesheet" type="text/css" href="../css/search.css">
 
     <!-- handle index web -->
-    <script src="../js/data.js"></script>
+    <!--<script src="../js/data.js"></script>
     <script src="../js/worship.js"></script>
-    <script src="../js/beru-theme/elements.js"></script>
+    <script src="../js/beru-theme/elements.js"></script>-->
 
     <!-- google analytics -->
     <script src="../js/analytics.js"></script>
@@ -88,15 +88,13 @@
 
       <!--- CONTAINER -->
       <div class="ui text container">
-        <!-- CHOOSE LETTER OR CHORDS -->
-        <div class="ui fluid two item tabs menu m1">
-          <a class="item i1 active" data-tab="Letras">Letras</a>
-          <a class="item i1" data-tab="Acordes">Acordes</a>
+        <div class="ui centered segment">
+          <div class="beru-artist">
+            <h1 class="ui header">Estamos Trabajando, gracias ...</h1>
+            <a class="beru-link" href="../search/"><i class="search icon"></i>Buscar Acordes De Canciones</a>
+          </div>
         </div>
-        <div class="ui tab active" data-tab="Letras" id="Letras"></div>
-        <div class="ui tab" data-tab="Acordes" id="Acordes">
       </div>
-    </div>
 
   </div>
 
