--- a/search/index.html
+++ b/search/index.html
@@ -83,12 +83,12 @@
               <div class="four wide column mobile-container events-link"><i class="calendar icon element-mobile"></i></div>
               <div class="four wide column mobile-container language-link active"><i class="search icon element-mobile"></i></div>
       </div>
-	
+
 	<!--search-->
       <div class="ui text container">
         <div class="ui fluid search">
 	  <div class="ui fluid icon input">
-	    <input class="prompt" type="text" placeholder="Buscar canciones...">
+	    <input class="prompt" type="text" placeholder="Buscar canción ...">
 	    <i class="search icon"></i>
 	  </div>
 	  <div class="results"></div>
