--- a/worship/index.html
+++ b/worship/index.html
@@ -35,9 +35,8 @@
     <link rel="stylesheet" type="text/css" href="../css/search.css">
 
     <!-- handle index web -->
-    <!--<script src="../js/data.js"></script>
+    <script src="../js/notes.js"></script>
     <script src="../js/worship.js"></script>
-    <script src="../js/beru-theme/elements.js"></script>-->
 
     <!-- google analytics -->
     <script src="../js/analytics.js"></script>
@@ -88,11 +87,12 @@
 
       <!--- CONTAINER -->
       <div class="ui text container">
-        <div class="ui centered segment">
-          <div class="beru-artist">
-            <h1 class="ui header">Estamos Trabajando, gracias ...</h1>
-            <a class="beru-link" href="../search/"><i class="search icon"></i>Buscar Acordes De Canciones</a>
-          </div>
+        <div class="ui top attached tabular menu">
+          <div class="active item">Tab</div>
+        </div>
+        <div class="ui bottom centered attached loading tab segment">
+          <p></p>
+          <p></p>
         </div>
       </div>
 
