--- a/worship/index.html
+++ b/worship/index.html
@@ -42,10 +42,7 @@
     <script src="../js/analytics.js"></script>
     <script src="../js/revolution.analytics.js"></script>
 
-
   </head>
-
-
 
   <body>
     <div class="pusher">
@@ -88,7 +85,9 @@
       <!--- CONTAINER -->
       <div class="ui text container">
         <div class="ui top attached tabular menu">
-          <div class="active item">Tab</div>
+          <div class="active item">Primera Canción</div>
+          <div class="item">Segunda Canción</div>
+          <div class="item">Tercera Canción</div>
         </div>
         <div class="ui bottom centered attached loading tab segment">
           <p></p>
