--- a/worship/index.html
+++ b/worship/index.html
@@ -85,11 +85,19 @@
       <!--- CONTAINER -->
       <div class="ui text container">
         <div class="ui top attached tabular menu">
-          <div class="active item">Primera Canción</div>
-          <div class="item">Segunda Canción</div>
-          <div class="item">Tercera Canción</div>
+          <div class="active item" data-tab="1">Primera Canción</div>
+          <div class="item" data-tab="2">Segunda Canción</div>
+          <div class="item" data-tab="3">Tercera Canción</div>
         </div>
-        <div class="ui bottom centered attached loading tab segment">
+        <div class="ui bottom centered attached loading tab segment" data-tab="1">
+          <p></p>
+          <p></p>
+        </div>
+        <div class="ui bottom centered attached loading tab segment" data-tab="2">
+          <p></p>
+          <p></p>
+        </div>
+        <div class="ui bottom centered attached loading tab segment" data-tab="3">
           <p></p>
           <p></p>
         </div>
