--- a/worship/index.html
+++ b/worship/index.html
@@ -89,7 +89,7 @@
           <div class="item" data-tab="2">Segunda Canción</div>
           <div class="item" data-tab="3">Tercera Canción</div>
         </div>
-        <div class="ui bottom centered attached loading tab segment" data-tab="1">
+        <div class="ui bottom centered attached loading tab segment active" data-tab="1">
           <p></p>
           <p></p>
         </div>
