--- a/worship/index.html
+++ b/worship/index.html
@@ -85,23 +85,19 @@
       <!--- CONTAINER -->
       <div class="ui text container">
         <div class="ui top attached tabular menu">
-          <div class="active item" data-tab="1">Primera Canción</div>
-          <div class="item" data-tab="2">Segunda Canción</div>
-          <div class="item" data-tab="3">Tercera Canción</div>
+          <a class="item active" data-tab="first">First</a>
+          <a class="item" data-tab="second">Second</a>
+          <a class="item" data-tab="third">Third</a>
         </div>
-        <div class="ui bottom centered attached loading tab segment active" data-tab="1">
-          <p></p>
-          <p></p>
+        <div class="ui bottom attached tab segment active" data-tab="first">
+          First
         </div>
-        <div class="ui bottom centered attached loading tab segment" data-tab="2">
-          <p></p>
-          <p></p>
+        <div class="ui bottom attached tab segment" data-tab="second">
+          Second
         </div>
-        <div class="ui bottom centered attached loading tab segment" data-tab="3">
-          <p></p>
-          <p></p>
+        <div class="ui bottom attached tab segment" data-tab="third">
+          Third
         </div>
-      </div>
 
   </div>
 
