--- a/worship/index.html
+++ b/worship/index.html
@@ -98,7 +98,7 @@
         <div class="ui bottom attached tab segment" data-tab="third">
           Third
         </div>
-
+      </div>
   </div>
 
   <!-- FOOTER -->
