--- a/worship/index.html
+++ b/worship/index.html
@@ -36,6 +36,7 @@
 
     <!-- handle index web -->
     <script src="../js/notes.js"></script>
+    <script src="../js/search.js"></script>
     <script src="../js/worship.js"></script>
 
     <!-- google analytics -->
