--- a/worship/index.html
+++ b/worship/index.html
@@ -84,7 +84,7 @@
 
       <!--- CONTAINER -->
       <div class="ui text container">
-        <div class="ui top attached tabular menu">
+        <div id="tab-songs" class="ui top attached tabular menu">
           <a class="item active" data-tab="first">First</a>
           <a class="item" data-tab="second">Second</a>
           <a class="item" data-tab="third">Third</a>
