--- a/worship/index.html
+++ b/worship/index.html
@@ -85,19 +85,13 @@
       <!--- CONTAINER -->
       <div class="ui text container">
         <div id="tab-songs" class="ui top attached tabular menu">
-          <a class="item active" data-tab="first">First</a>
-          <a class="item" data-tab="second">Second</a>
-          <a class="item" data-tab="third">Third</a>
+          <a class="item active" data-tab="first">1º Canción</a>
+          <a class="item" data-tab="second">2º Canción</a>
+          <a class="item" data-tab="third">3º Canción</a>
         </div>
-        <div class="ui bottom attached tab segment active" data-tab="first">
-          First
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="second">
-          Second
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="third">
-          Third
-        </div>
+        <div id="1Song" class="ui bottom attached tab segment active" data-tab="first"></div>
+        <div id="2Song" class="ui bottom attached tab segment" data-tab="second"></div>
+        <div id="3Song" class="ui bottom attached tab segment" data-tab="third"></div>
       </div>
   </div>
 
