--- a/worship/index.html
+++ b/worship/index.html
@@ -37,6 +37,7 @@
     <!-- handle index web -->
     <script src="../js/notes.js"></script>
     <script src="../js/worship.js"></script>
+    <link rel="stylesheet" type="text/css" src="../css/worship.css"></script>
 
     <!-- google analytics -->
     <script src="../js/analytics.js"></script>
@@ -89,9 +90,9 @@
           <a class="item" data-tab="second">2º Canción</a>
           <a class="item" data-tab="third">3º Canción</a>
         </div>
-        <div id="1Song" class="ui bottom attached tab segment active" data-tab="first"></div>
-        <div id="2Song" class="ui bottom attached tab segment" data-tab="second"></div>
-        <div id="3Song" class="ui bottom attached tab segment" data-tab="third"></div>
+        <div id="1Song" class="ui bottom attached tab segment active hidden-segment" data-tab="first"></div>
+        <div id="2Song" class="ui bottom attached tab segment hidden-segment" data-tab="second"></div>
+        <div id="3Song" class="ui bottom attached tab segment hidden-segment" data-tab="third"></div>
       </div>
   </div>
 
