--- a/worship/index.html
+++ b/worship/index.html
@@ -37,7 +37,7 @@
     <!-- handle index web -->
     <script src="../js/notes.js"></script>
     <script src="../js/worship.js"></script>
-    <link rel="stylesheet" type="text/css" src="../css/worship.css"></script>
+    <link rel="stylesheet" type="text/css" src="../css/worship.css">
 
     <!-- google analytics -->
     <script src="../js/analytics.js"></script>
