--- a/worship/index.html
+++ b/worship/index.html
@@ -53,7 +53,7 @@
         <div class="ui container">
           <div class="ui secondary pointing menu">
             <a class="container-logoc29">
-              <image class="logoc29" src="../images/logo.png">
+              <img class="logoc29" src="../images/logo.png">
             </a>
             <a class="item" href="../home/">
               <i class="home icon"></i> Principal
